// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complexModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::complexModule>>
 * BESPOKE<<fn3, TEST1, test2, 3tESt3>>
 * SIGNED<<I+Mm22cqEJ5c0Gjz0Pc4FwjX89d42hmck2yZUKQnQU2NgZOdiZvZZkBdZ0w7cIa2FSLPYJ2NNg1VNJ0TKg7ACg==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";

interface If1 {
}

export async function function3(
  var1: string,
  var2: object,
): Promise<string[]> {
  /* BESPOKE START <<fn3>> */
  /* BESPOKE END <<fn3>> */
}

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */

/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */

let variable3: number | null | undefined = 1;

export interface If2 {
  item: string;
}

type Ty1 = number;

export type Ty2 = string | null;

export type Ty3 = Ty2 | Ty1;

export async function function2(
): Promise<string> {
}

export const variable1: string;

/* BESPOKE START <<3tESt3>> */
/* BESPOKE END <<3tESt3>> */

const variable2: string | undefined = \\"TEST\\";

export interface If3 {
  test: null | string;
  test2: If2;
}

function function1(
): void {
}
"
`;

exports[`contentModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::contentModule>>
 * BESPOKE<<TEST1, test2, fn3>>
 * SIGNED<<w98fTvI6lA77DnSZRjzgEfBJyz7lA1txRjigT8LHRQ2U39SVXFeM6uZf093LVeJqbxh7eMfSi1V0CYn9On4UWw==>>
 */

type Ty1 = number;

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */

interface If1 {
}

function function1(
): void {
}

export const variable1: string;

export type Ty2 = string | null;

export async function function2(
): Promise<string> {
}

export interface If3 {
  test: null | string;
  test2: If2;
}

const variable2: string | undefined = \\"TEST\\";

let variable3: number | null | undefined = 1;

/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */

export async function function3(
  var1: string,
  var2: object,
): Promise<string[]> {
  /* BESPOKE START <<fn3>> */
  /* BESPOKE END <<fn3>> */
}

export interface If2 {
  item: string;
}

export type Ty3 = Ty2 | Ty1;
"
`;

exports[`emptyModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::emptyModule>>
 * SIGNED<<vmiIOMqGhuXJBom/KrWFzvETfJmbSMcLkvZ6XDTcFWl7XRHJgu1tcb4eHn97TgcziEqpfD96M5qO0DV3z3S+CQ==>>
 */
"
`;

exports[`importModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::importModule>>
 * SIGNED<<EJWOrRMLAeusKmK7X5+JjyKfAKF8ryn6DAAEwIiaXsQogb/SSONlan944YLt/m93dE2HDU38Me1lqSA0C05OZQ==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";
"
`;
